# airflow-workshop

./: Dockerfile  README.md  pyproject.toml
dags/: main.py
