[project]
name = "airflow"
version = "0.1.0"
description = "Default template for PDM package"
authors = [
    {name = "vfamim", email = "vfamim@gmail.com"},
]
dependencies = [
    "apache-airflow>=2.10.0",
]
requires-python = "==3.12.*"
readme = "README.md"
license = {text = "MIT"}


[tool.pdm]
distribution = false
